# ainm_main_comp

./: .amlignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  eval_results.json  experiments.csv  main.py  pyproject.toml
docker/: Dockerfile.test  test_submission.sh
docs/: competition_report.tex
experiments/: __init__.py  analyze.py  library.py  suite.py  train.py  tune.py
jobs/: job_distilled_model.yml  job_eval_twostage.yml  job_fulldata_11x_s42.yml  job_fulldata_11x_s42_v2.yml  job_fulldata_cls15_combo.yml  job_fulldata_cls20_s42.yml  job_fulldata_l_noflip.yml  job_fulldata_l_noflip_800.yml  job_fulldata_l_noflip_s123.yml  job_fulldata_l_noflip_s77.yml  job_fulldata_l_s42.yml  job_fulldata_m_noflip_s42.yml  job_fulldata_rtdetr_l.yml  job_fulldata_soup_v2.yml  job_fulldata_x_300ep.yml  job_fulldata_x_800.yml  job_fulldata_x_labelsmooth.yml  job_fulldata_x_lightaug.yml  job_fulldata_x_lightaug_s77.yml  job_fulldata_x_noflip.yml  job_fulldata_x_noflip_250ep.yml  job_fulldata_x_noflip_250ep_s77.yml  job_fulldata_x_noflip_300ep.yml  job_fulldata_x_noflip_800.yml  job_fulldata_x_noflip_800_s77.yml  job_fulldata_x_noflip_closemosaic20.yml  job_fulldata_x_noflip_cm25_s77.yml  job_fulldata_x_noflip_cm30.yml  job_fulldata_x_noflip_combo_s123.yml  job_fulldata_x_noflip_combo_s77.yml  job_fulldata_x_noflip_cp03.yml  job_fulldata_x_noflip_deg5.yml  job_fulldata_x_noflip_ls01.yml  job_fulldata_x_noflip_mix01.yml  job_fulldata_x_noflip_s123.yml  job_fulldata_x_noflip_s13.yml  job_fulldata_x_noflip_s2024.yml  job_fulldata_x_noflip_s256.yml  job_fulldata_x_noflip_s314.yml  job_fulldata_x_noflip_s512.yml  (+116 more)
(+189 files in other folders)
